<resources>
    <string name="app_name">Noteboard</string>

    <string name="game_not_started">Start the game first!</string>
    <string name="game_already_started">Stop the currently ongoing game first!</string>

    <string name="placeholder_landing">Landing fragment</string>
    <string name="placeholder_results">Results fragment</string>
    <string name="wait_before_display">Please wait until a question mark has displayed!</string>
    <string name="btn_stats">Stats</string>
    <string name="btn_play">Play!</string>
    <string name="btn_options">Options</string>
    <string name="btn_play_again">Play again!</string>
    <string name="btn_menu">menu</string>
    <string name="btn_share">Share resultsFrets!</string>
    <string name="title_results">Results!</string>
    <string name="score">Score</string>
    <string name="accuracy">Accuracy</string>
    <string name="points">Points</string>
    <string name="root_title">Title</string>
    <string name="title_basic_preference">Basic pref title</string>
    <string name="summary_basic_preference">Basic pref summary</string>
    <string name="title_stylish_preference">Stylish pref title</string>
    <string name="summary_stylish_preference">Stylish pref summary</string>
    <string name="inline_preferences">Inline title</string>
    <string name="title_checkbox_preference">Title checkbox pref</string>
    <string name="summary_checkbox_preference">Summary checkbox pref</string>
    <string name="dialog_based_preferences">Dialog based pref</string>
    <string name="title_edittext_preference">Title edittext</string>
    <string name="summary_edittext_preference">Summary edittext</string>
    <string name="dialog_title_edittext_preference">Dialog title</string>
    <string name="title_list_preference">List pref title</string>
    <string name="summary_list_preference">List summary</string>
    <string name="dialog_title_list_preference">list dialog title</string>
    <string name="title_multi_list_preference">multiselect list title</string>
    <string name="summary_multi_list_preference">multiselect list summary</string>
    <string name="dialog_title_multi_list_preference">multiselect list dialog title</string>
    <string name="launch_preferences">launch pref</string>
    <string name="title_screen_preference">screen pref</string>
    <string name="summary_screen_preference">screen summary</string>
    <string name="title_next_screen_toggle_preference">checkbox pref</string>
    <string name="summary_next_screen_toggle_preference">checkbox summ</string>
    <string name="title_intent_preference">pref screen title</string>
    <string name="summary_intent_preference">pref screen summary</string>
    <string name="preference_attributes">pref title</string>
    <string name="title_parent_preference">checkbox pref</string>
    <string name="summary_parent_preference">summary checkbox</string>
    <string name="title_child_preference">checkbox title</string>
    <string name="summary_child_preference">checkbox pref</string>
    <string name="summary_dropdown_preference">checkbox pref summary</string>
    <string name="title_dropdown_preference">checkbox pref title</string>
    <string name="options_game_time_title">Game time</string>
    <string name="options_game_time_summary">Specifies the amount of seconds each game should last.</string>
    <string name="options_game_time_dialog_title">Seconds</string>
    <string name="options_game_category_title">Game</string>
    <string name="options_game_frets_title">Frets</string>
    <string name="options_game_frets_summary">Specifies the amount of frets the fretboard should have.</string>
    <string name="options_game_frets_dialog_title">Frets</string>
    <string name="key_options_game_frets">options_game_frets</string>
    <string name="key_options_game_time">options_game_time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_more_games">More Games</string>
    <string name="btn_frets">Frets!</string>
    <string name="btn_octaves">Octaves!</string>
    <string name="btn_choose">Choose!</string>


</resources>
