<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/root_title">

    <PreferenceCategory android:title="@string/options_game_category_title">

        <EditTextPreference
            android:dialogTitle="@string/options_game_frets_dialog_title"
            android:inputType="number"
            android:key="@string/key_options_game_frets"
            android:padding="0dp"
            android:summary="@string/options_game_frets_summary"
            android:title="@string/options_game_frets_title" />

        <ListPreference
            android:dialogTitle="@string/options_game_time_dialog_title"
            android:entries="@array/options_entries_game_time"
            android:entryValues="@array/options_entries_game_time"
            android:key="@string/key_options_game_time"
            android:summary="@string/options_game_time_summary"
            android:title="@string/options_game_time_title" />

    </PreferenceCategory>
</PreferenceScreen>

