<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_results" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:paddingBottom="16dp"
        android:weightSum="4"
        tools:context=".ResultsFragment">
        <!--style="@android:style/Widget.Material.Button.Colored"-->

        <Button
            android:id="@+id/btnMenu"
            style="@android:style/Widget.Material.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:text="@string/btn_menu" />

        <Button
            android:id="@+id/btnPlayAgain"
            style="@android:style/Widget.Material.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="3"
            android:text="@string/btn_play_again" />

    </LinearLayout>
</LinearLayout>
